# arithmetic-parser

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
arithmetic_eval/: all.html  enum.Function.html  enum.Value.html  enum.ValueType.html  index.html  macro.wrap_fn!.html  macro.wrap_fn.html  macro.wrap_fn_with_context!.html  macro.wrap_fn_with_context.html  sidebar-items.js  struct.Assertions.html  struct.CallContext.html  struct.Comparisons.html  struct.Environment.html  struct.ExecutableModule.html  struct.ExecutableModuleBuilder.html  struct.IndexedId.html  struct.InterpretedFn.html  struct.ModuleImports.html  struct.Object.html  struct.OpaqueRef.html  struct.Prelude.html  struct.Tuple.html  struct.WildcardId.html  struct.WithArithmetic.html  trait.CompilerExt.html  trait.ModuleId.html  trait.NativeFn.html  trait.Number.html  trait.VariableMap.html  type.SpannedValue.html
arithmetic_parser/: all.html  enum.BinaryOp.html  enum.CodeFragment.html  enum.Context.html  enum.DestructureRest.html  enum.ErrorKind.html  enum.Expr.html  enum.ExprType.html  enum.Lvalue.html  enum.LvalueLen.html  enum.LvalueType.html  enum.Op.html  enum.OpPriority.html  enum.Statement.html  enum.StatementType.html  enum.UnaryOp.html  enum.UnsupportedType.html  fn.is_valid_variable_name.html  fn.with_span.html  index.html  sidebar-items.js  struct.Block.html  struct.Destructure.html  struct.Error.html  struct.FnDefinition.html  struct.LocatedSpan.html  struct.ObjectDestructure.html  struct.ObjectDestructureField.html  struct.ObjectExpr.html  struct.SpannedError.html  trait.StripCode.html  trait.StripResultExt.html  type.Error.html  type.InputSpan.html  type.Location.html  type.MaybeSpanned.html  type.NomResult.html  type.Spanned.html  type.SpannedExpr.html  type.SpannedLvalue.html  (+1 more)
arithmetic_typing/: all.html  enum.TupleIndex.html  enum.Type.html  enum.UnknownLen.html  index.html  sidebar-items.js  struct.Annotated.html  struct.DynConstraints.html  struct.FnWithConstraints.html  struct.Function.html  struct.FunctionBuilder.html  struct.LengthVar.html  struct.Object.html  struct.Slice.html  struct.Tuple.html  struct.TupleLen.html  struct.TypeEnvironment.html  struct.TypeVar.html  trait.PrimitiveType.html
benches/: interpreter.rs
cli/: Cargo.toml  README.md
cli/src/: common.rs  library.rs  main.rs  repl.rs
cli/tests/: cli_expectations.rs  non_interactive.rs  repl.rs
cli/tests/snapshots/: README.md
cli/tests/snapshots/repl/: README.md
e2e-tests/no-std/: Cargo.toml  README.md
e2e-tests/no-std/.cargo/: config.toml
e2e-tests/no-std/src/: main.rs
e2e-tests/wasm/: Cargo.toml  test.js
e2e-tests/wasm/src/: lib.rs
eval/: CHANGELOG.md  Cargo.toml  README.md
eval/benches/: interpreter.rs
eval/examples/: cyclic_group.rs  dsa.script  el_gamal.rs  elgamal.script  owned_module.rs  rfold.script  schnorr.script
eval/examples/common/: mod.rs
eval/src/: arith.rs  compiler.rs  env.rs  error.rs  executable.rs  fns.rs  lib.rs  module_id.rs  values.rs  variable_map.rs
eval/src/arith/: bigint.rs  generic.rs  mod.rs  modular.rs
eval/src/compiler/: captures.rs  expr.rs  mod.rs
eval/src/env/: mod.rs  variable_map.rs
eval/src/exec/: command.rs  mod.rs  module_id.rs  registers.rs
eval/src/executable/: command.rs  env.rs  mod.rs  module_id.rs  registers.rs
eval/src/fns/: arity.rs  array.rs  assertions.rs  flow.rs  mod.rs  std.rs  wrapper.rs
eval/src/fns/wrapper/: mod.rs  traits.rs
eval/src/values/: arithmetic.rs  env.rs  function.rs  mod.rs  object.rs  ops.rs  tuple.rs  variable_map.rs
eval/tests/: basics.rs  check_readme.rs  custom_cmp.rs  hof.rs  integers.rs  readme.rs
eval/tests/basics/: defer.rs  functions.rs  main.rs  objects.rs  prototypes.rs
eval/tests/integration/: custom_cmp.rs  functions.rs  hof.rs  integers.rs  main.rs  objects.rs
examples/: complex_c.rs
parser/: CHANGELOG.md  Cargo.toml  README.md
parser/examples/: complex_c.rs
parser/src/: error.rs  grammars.rs  helpers.rs  lib.rs  ops.rs  parser.rs  spans.rs  traits.rs
parser/src/ast/: expr.rs  lvalue.rs  mod.rs
parser/src/grammars/: mod.rs  traits.rs
parser/src/parser/: expr.rs  helpers.rs  lvalue.rs  mod.rs  tests.rs
parser/src/parser/tests/: basics.rs  features.rs  function.rs  mod.rs  object.rs  order.rs  tuple.rs  type_cast.rs
parser/tests/: check_readme.rs  readme.rs
search.index/: 0217ca9163c4.js  0284a7b7e488.js  02b99038abf0.js  037e60f9d7f5.js  03d15ffd37b4.js  041b8d2692a5.js  0455b46b0aff.js  06d1c991ff1d.js  0744bc8d233f.js  0ab190183b6e.js  0b741fc6a3f1.js  0ba81e78beec.js  0e8321414c5b.js  10e24e009afc.js  11067d27c901.js  113061858a8d.js  1131d48fc42e.js  (+92 more)
test-wasm/: Cargo.toml  README.md  test.js
test-wasm/src/: lib.rs
typing/: CHANGELOG.md  Cargo.toml  README.md
typing/examples/: fn_transform.rs  num_or_bytes.rs  strings.rs
typing/src/: arith.rs  constraints.rs  context.rs  defs.rs  error.rs  lib.rs  substitutions.rs  type_map.rs  visit.rs
typing/src/arith/: constraints.rs  mod.rs
typing/src/arith/substitutions/: fns.rs  mod.rs  tests.rs
typing/src/ast/: conversion.rs  mod.rs  tests.rs
typing/src/context/: mod.rs  tests.rs
typing/src/env/: mod.rs  processor.rs  tests.rs  type_annotation_tests.rs  type_hint_tests.rs
typing/src/env/tests/: annotations.rs  error_handling.rs  mod.rs
typing/src/error/: kind.rs  location.rs  mod.rs  op_errors.rs  path.rs
typing/src/parser/: conversion.rs  mod.rs  tests.rs
typing/src/substitutions/: fns.rs  mod.rs  tests.rs
typing/src/types/: fn_type.rs  mod.rs  object.rs  quantifier.rs  tuple.rs
typing/tests/: check_readme.rs  length_eqs.rs  multiple_errors.rs  readme.rs
typing/tests/integration/: annotations.rs  basics.rs  length_eqs.rs  main.rs  object.rs
typing/tests/integration/errors/: annotations.rs  mod.rs  multiple.rs  object.rs  recovery.rs
typing/tests/integration/examples/: dsa.script  elgamal.script  mod.rs  quick_sort.script  rfold.script  schnorr.script
(+517 files in other folders)
