[workspace]
members = [
  # Libraries
  "parser",
  "eval",
  "typing",
  # CLI app
  "cli",
  # E2E tests
  "e2e-tests/wasm",
  "e2e-tests/no-std",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/arithmetic-parser"

# Speed up big integer crates.
[profile.dev.package.num-bigint]
opt-level = 2
[profile.dev.package.glass_pumpkin]
opt-level = 2
