[workspace]
members = [
  # Libraries
  "parser",
  "eval",
  "typing",
  # CLI app
  "cli",
  # E2E tests
  "e2e-tests/wasm",
  "e2e-tests/no-std",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/arithmetic-parser"

[workspace.dependencies]
anyhow = { version = "1.0.79", default-features = false }
assert_matches = "1.3.0"
bitflags = "2.4.2"
criterion = "0.5.0"
derive_more = "0.99.7"
glass_pumpkin = "1.0.0"
hashbrown = "0.14.3"
hex = "0.4.2"
nom = { version = "7", default-features = false, features = ["alloc"] }
nom_locate = { version = "4", default-features = false, features = ["alloc"] }
num-bigint = "0.4.0"
num-complex = "0.4.0"
num-traits = { version = "0.2.17", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
pulldown-cmark = "0.9.0"
rand = "0.8.3"
sha2 = "0.10.0"
static_assertions = "1.1.0"
typed-arena = "2.0.1"
version-sync = "0.9"

# Speed up big integer crates.
[profile.dev.package.num-bigint]
opt-level = 2
[profile.dev.package.glass_pumpkin]
opt-level = 2
