[package]
name = "arithmetic-parser-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "CLI / REPL for arithmetic expressions."

[[bin]]
name = "arithmetic-parser"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.6", features = ["derive", "env", "wrap_help"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
is-terminal = "0.4.12"
num-complex.workspace = true
num-traits.workspace = true
rustyline = "14.0.0"
textwrap = "0.16.1"
unindent = "0.2.3"

arithmetic-parser = { version = "0.3.0", path = "../parser" }
arithmetic-eval = { version = "0.3.0", path = "../eval", features = ["complex"] }
arithmetic-typing = { version = "0.3.0", path = "../typing" }

[dev-dependencies]
assert_matches.workspace = true

[dev-dependencies.term-transcript]
version = "0.3.0"
git = "https://github.com/slowli/term-transcript.git"
rev = "982d74b9808ca1d975008a1256793a5d6b47b6b0"
