[package]
name = "arithmetic-parser-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "CLI / REPL for arithmetic expressions."

[[bin]]
name = "arithmetic-parser"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
codespan.workspace = true
codespan-reporting.workspace = true
num-complex.workspace = true
num-traits.workspace = true
rustyline.workspace = true
textwrap.workspace = true
unindent.workspace = true

arithmetic-parser = { workspace = true, default-features = true }
arithmetic-eval = { workspace = true, default-features = true, features = ["complex"] }
arithmetic-typing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
term-transcript.workspace = true
