[package]
name = "arithmetic-parser"
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.57"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Parser for arithmetic expressions with flexible literals and type annotations."
repository = "https://github.com/slowli/arithmetic-parser"
categories = ["parser-implementations", "mathematics", "no-std"]
keywords = ["parser", "arithmetic", "scripting", "language"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Public dependencies (present in the public API).
anyhow = { version = "1.0.27", default-features = false }
bitflags = "1.2.1"
nom = { version = "7", default-features = false, features = ["alloc"] }
nom_locate = { version = "4", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.14", default-features = false }
num-complex = { version = "0.4.0", optional = true }
num-bigint = { version = "0.4.0", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
hex = "0.4.2"
pulldown-cmark = "0.9.0"
version-sync = "0.9"

[features]
default = ["std"]
# Enables support of types from `std`, such as the `Error` trait.
std = ["anyhow/std"]

[[example]]
name = "complex_c"
path = "examples/complex_c.rs"
required-features = ["num-complex"]
