[package]
name = "arithmetic-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Parser for arithmetic expressions with flexible literals and type annotations."
categories = ["parser-implementations", "mathematics", "no-std"]
keywords = ["parser", "arithmetic", "scripting", "language"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Public dependencies (present in the public API).
anyhow.workspace = true
bitflags.workspace = true
nom.workspace = true
nom_locate.workspace = true
num-bigint = { workspace = true, optional = true }
num-complex = { workspace = true, optional = true }
num-traits.workspace = true

[dev-dependencies]
assert_matches.workspace = true
hex.workspace = true
pulldown-cmark.workspace = true
version-sync.workspace = true

[features]
default = ["std"]
# Enables support of types from `std`, such as the `Error` trait.
std = ["anyhow/std"]

[[example]]
name = "complex_c"
path = "examples/complex_c.rs"
required-features = ["num-complex"]
