[package]
name = "arithmetic-typing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Hindley-Milner type inference for arithmetic expressions."
categories = ["mathematics"]
keywords = ["typing", "type-system", "arithmetic", "scripting", "language"]

[dependencies]
arithmetic-parser = { version = "0.3.0", path = "../parser" }

anyhow = "1.0.27"
nom = "7"
num-traits = "0.2.14"

[dev-dependencies]
assert_matches = "1.5.0"
hex = "0.4.3"
pulldown-cmark = "0.9.0"
version-sync = "0.9"
