[package]
name = "arithmetic-typing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Hindley-Milner type inference for arithmetic expressions."
categories = ["mathematics"]
keywords = ["typing", "type-system", "arithmetic", "scripting", "language"]

[dependencies]
arithmetic-parser = { version = "0.3.0", path = "../parser" }

anyhow.workspace = true
nom.workspace = true
num-traits.workspace = true

[dev-dependencies]
assert_matches.workspace = true
hex.workspace = true
pulldown-cmark.workspace = true
version-sync.workspace = true
