[package]
name = "arithmetic-parser-nostd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing usability of `arithmetic-parser` in no-std env"
publish = false

[dependencies]
# Cortex-M dependencies
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-alloc = "0.5.0"
panic-halt = "0.2.0"

rand_chacha = { version = "0.3.1", default-features = false }

# Arithmetic dependencies
arithmetic-parser = { path = "../../parser", default-features = false }
arithmetic-eval = { path = "../../eval", default-features = false, features = ["hashbrown"] }
