[package]
name = "arithmetic-parser-nostd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing usability of `arithmetic-parser` in no-std env"
publish = false

[dependencies]
# Cortex-M dependencies
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
embedded-alloc.workspace = true
panic-halt.workspace = true

rand_chacha.workspace = true

# Arithmetic dependencies
arithmetic-parser.workspace = true
arithmetic-eval = { workspace = true, features = ["hashbrown"] }
