[package]
name = "arithmetic-parser-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing usability of `arithmetic-parser` & `arithmetic-eval` in WASM"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM glue
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }

arithmetic-parser = { path = "../../parser", default-features = false }
arithmetic-eval = { path = "../../eval" }
