[package]
name = "arithmetic-parser-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing usability of `arithmetic-parser` & `arithmetic-eval` in WASM"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM glue
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }

arithmetic-parser.workspace = true
arithmetic-eval = { workspace = true, default-features = true }
